[metadata]
name = tahu
version = 0.1.1
author = Aitemir Kuandyk
author_email = mooniron.k@gmail.com
description = Eclipse Tahu
long_description = file: README.md
long_description_content_type = text/markdown
url = https://bitbucket.org/alconpc/adl-imtp-poc/ 
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Eclipse Public License 2.0 (EPL-2.0)
    Operating System :: OS Independent

[options]
python_requires = >=3.6
package_dir = 
    = tahu
packages = find:

[options.packages.find]
where = tahu