[metadata]
name = tahu
version = 0.1.1
author = Aitemir Kuandyk
author_email = mooniron.k@gmail.com
description = Eclipse Tahu
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/UBtrNvME/tahu.git
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Eclipse Public License 2.0 (EPL-2.0)
    Operating System :: OS Independent

[options]
python_requires = >=3.6
packages =
    tahu
install_requires = pip
zip_safe = True
